refactor: Migrate to Java 21
This is a demo on May 23 

Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.migrate.UpgradeToJava21?organizationId=RklOT1M%3D

Co-authored-by: Moderne <team@moderne.io>