@@ -40,7 +40,7 @@ public class NumericGranularity implements Granularity<BigDecimal> {
     {
         BigDecimal asNumber = NumberUtils.coerceToBigDecimal(granularity);
         if (asNumber == null) {
-            throw new ValidationException(String.format("Can't interpret numeric granularity expression: %s", ValidationResult.quote(granularity)));
+            throw new ValidationException("Can't interpret numeric granularity expression: %s".formatted(ValidationResult.quote(granularity)));
         }
         if (asNumber.compareTo(BigDecimal.ONE) > 0) {
             throw new ValidationException("Numeric granularity must be <= 1");
