@@ -97,7 +97,7 @@ public class AfterRelation<T extends Comparable<T>> implements FieldSpecRelation
 
     @Override
     public String toString() {
-        return String.format("%s is after %s%s %s %s", main, inclusive ? "or equal to " : "", other, offset >= 0 ? "plus" : "minus", Math.abs(offset));
+        return "%s is after %s%s %s %s".formatted(main, inclusive ? "or equal to " : "", other, offset >= 0 ? "plus" : "minus", Math.abs(offset));
     }
 
     @Override
