@@ -69,6 +69,6 @@ public class AfterOrAtConstraint implements AtomicConstraint {
 
     @Override
     public String toString(){
-        return String.format("`%s` >= %s", field.getName(), referenceValue);
+        return "`%s` >= %s".formatted(field.getName(), referenceValue);
     }
 }
