@@ -61,5 +61,5 @@ public class OfLengthConstraint implements AtomicConstraint {
     }
 
     @Override
-    public String toString() { return String.format("`%s` length = %s", field.getName(), referenceValue); }
+    public String toString() { return "`%s` length = %s".formatted(field.getName(), referenceValue); }
 }
