@@ -61,5 +61,5 @@ public class ShorterThanConstraint implements AtomicConstraint {
     }
 
     @Override
-    public String toString() { return String.format("`%s` length < %d", field.getName(), referenceValue); }
+    public String toString() { return "`%s` length < %d".formatted(field.getName(), referenceValue); }
 }
