@@ -122,9 +122,9 @@ class DecisionTreeFactoryTests {
     void shouldReturnAnalysedRuleWithNoDecisions_IfProfileContainsOnlyAtomicConstraints() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
         InSetConstraint constraint0 = new InSetConstraint(
-            inputFieldList.get(0),
+            inputFieldList.getFirst(),
             TestAtomicConstraintBuilder.inSetRecordsFrom(10));
-        GreaterThanConstraint constraint1 = new GreaterThanConstraint(inputFieldList.get(0), NumberUtils.coerceToBigDecimal(0));
+        GreaterThanConstraint constraint1 = new GreaterThanConstraint(inputFieldList.getFirst(), NumberUtils.coerceToBigDecimal(0));
         MatchesRegexConstraint constraint2 = new MatchesRegexConstraint(inputFieldList.get(1), Pattern.compile("start.*end"));
         Profile testInput = new Profile(inputFieldList, Arrays.asList(constraint0, constraint1, constraint2), new ArrayList<>());
 
@@ -143,9 +143,9 @@ class DecisionTreeFactoryTests {
     void shouldReturnAnalysedRuleWithAllConstraintsInAtomicConstraintsCollection_IfProfileContainsOnlyAtomicConstraints() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
         InSetConstraint constraint0 = new InSetConstraint(
-            inputFieldList.get(0),
+            inputFieldList.getFirst(),
             TestAtomicConstraintBuilder.inSetRecordsFrom(10));
-        GreaterThanConstraint constraint1 = new GreaterThanConstraint(inputFieldList.get(0), NumberUtils.coerceToBigDecimal(0));
+        GreaterThanConstraint constraint1 = new GreaterThanConstraint(inputFieldList.getFirst(), NumberUtils.coerceToBigDecimal(0));
         MatchesRegexConstraint constraint2 = new MatchesRegexConstraint(inputFieldList.get(1), Pattern.compile("start.*end"));
         List<Constraint> inputConstraints = Arrays.asList(constraint0, constraint1, constraint2);
         Profile testInput = new Profile(inputFieldList, inputConstraints, new ArrayList<>());
@@ -166,8 +166,8 @@ class DecisionTreeFactoryTests {
     @Test
     void shouldReturnAnalysedRuleWithNoDecisions_IfProfileContainsOnlyAtomicConstraintsAndAndConstraints() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
-        InSetConstraint constraint0 = new InSetConstraint(inputFieldList.get(0), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
-        GreaterThanConstraint constraint1 = new GreaterThanConstraint(inputFieldList.get(0), NumberUtils.coerceToBigDecimal(0));
+        InSetConstraint constraint0 = new InSetConstraint(inputFieldList.getFirst(), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
+        GreaterThanConstraint constraint1 = new GreaterThanConstraint(inputFieldList.getFirst(), NumberUtils.coerceToBigDecimal(0));
         AndConstraint andConstraint0 = new AndConstraint(Arrays.asList(constraint0, constraint1));
         MatchesRegexConstraint constraint2 = new MatchesRegexConstraint(inputFieldList.get(1), Pattern.compile("start.*end"));
         Profile testInput = new Profile(inputFieldList, Arrays.asList(andConstraint0, constraint2), new ArrayList<>());
@@ -185,8 +185,8 @@ class DecisionTreeFactoryTests {
     @Test
     void shouldReturnAnalysedRuleWithAllAtomicConstraintsInAtomicConstraintsCollection_IfProfileContainsOnlyAtomicConstraintsAndAndConstraints() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
-        InSetConstraint constraint0 = new InSetConstraint(inputFieldList.get(0), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
-        GreaterThanConstraint constraint1 = new GreaterThanConstraint(inputFieldList.get(0), NumberUtils.coerceToBigDecimal(0));
+        InSetConstraint constraint0 = new InSetConstraint(inputFieldList.getFirst(), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
+        GreaterThanConstraint constraint1 = new GreaterThanConstraint(inputFieldList.getFirst(), NumberUtils.coerceToBigDecimal(0));
         AndConstraint andConstraint0 = new AndConstraint(Arrays.asList(constraint0, constraint1));
         MatchesRegexConstraint constraint2 = new MatchesRegexConstraint(inputFieldList.get(1), Pattern.compile("start.*end"));
         Profile testInput = new Profile(inputFieldList, Arrays.asList(andConstraint0, constraint2), new ArrayList<>());
@@ -209,8 +209,8 @@ class DecisionTreeFactoryTests {
     @Test
     void shouldReturnAnalysedRuleWithDecisionForEachOrConstraint() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
-        InSetConstraint constraint0 = new InSetConstraint(inputFieldList.get(0), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
-        GreaterThanConstraint constraint1 = new GreaterThanConstraint(inputFieldList.get(0), NumberUtils.coerceToBigDecimal(0));
+        InSetConstraint constraint0 = new InSetConstraint(inputFieldList.getFirst(), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
+        GreaterThanConstraint constraint1 = new GreaterThanConstraint(inputFieldList.getFirst(), NumberUtils.coerceToBigDecimal(0));
         OrConstraint orConstraint0 = new OrConstraint(Arrays.asList(constraint0, constraint1));
         InSetConstraint constraint2 = new InSetConstraint(
             inputFieldList.get(1),
@@ -233,8 +233,8 @@ class DecisionTreeFactoryTests {
     @Test
     void shouldReturnAnalysedRuleWithNoAtomicConstraints_IfAllAtomicConstraintsInProfileAreChildrenOfOrConstraints() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
-        InSetConstraint constraintA = new InSetConstraint(inputFieldList.get(0), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
-        GreaterThanConstraint constraintB = new GreaterThanConstraint(inputFieldList.get(0), NumberUtils.coerceToBigDecimal(0));
+        InSetConstraint constraintA = new InSetConstraint(inputFieldList.getFirst(), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
+        GreaterThanConstraint constraintB = new GreaterThanConstraint(inputFieldList.getFirst(), NumberUtils.coerceToBigDecimal(0));
         OrConstraint orConstraint0 = new OrConstraint(Arrays.asList(constraintA, constraintB));
         InSetConstraint constraintC = new InSetConstraint(
             inputFieldList.get(1),
@@ -257,8 +257,8 @@ class DecisionTreeFactoryTests {
     @Test
     void shouldReturnAnalysedRuleWithCorrectDecisionStructure_IfAllAtomicConstraintsInProfileAreChildrenOfOrConstraints() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
-        InSetConstraint constraintA = new InSetConstraint(inputFieldList.get(0), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
-        GreaterThanConstraint constraintB = new GreaterThanConstraint(inputFieldList.get(0), NumberUtils.coerceToBigDecimal(0));
+        InSetConstraint constraintA = new InSetConstraint(inputFieldList.getFirst(), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
+        GreaterThanConstraint constraintB = new GreaterThanConstraint(inputFieldList.getFirst(), NumberUtils.coerceToBigDecimal(0));
         OrConstraint orConstraint0 = new OrConstraint(Arrays.asList(constraintA, constraintB));
         InSetConstraint constraintC = new InSetConstraint(
             inputFieldList.get(1),
@@ -292,9 +292,9 @@ class DecisionTreeFactoryTests {
     @Test
     void shouldReturnAnalysedRuleWithCorrectDecisionStructure_IfAllAtomicConstraintsInProfileAreChildrenOfOrAndAndConstraints() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
-        InSetConstraint constraintA = new InSetConstraint(inputFieldList.get(0), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
-        GreaterThanConstraint constraintB = new GreaterThanConstraint(inputFieldList.get(0), NumberUtils.coerceToBigDecimal(0));
-        GreaterThanConstraint constraintC = new GreaterThanConstraint(inputFieldList.get(0), NumberUtils.coerceToBigDecimal(5));
+        InSetConstraint constraintA = new InSetConstraint(inputFieldList.getFirst(), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
+        GreaterThanConstraint constraintB = new GreaterThanConstraint(inputFieldList.getFirst(), NumberUtils.coerceToBigDecimal(0));
+        GreaterThanConstraint constraintC = new GreaterThanConstraint(inputFieldList.getFirst(), NumberUtils.coerceToBigDecimal(5));
         AndConstraint andConstraint0 = new AndConstraint(Arrays.asList(constraintC, constraintB));
         OrConstraint orConstraint0 = new OrConstraint(Arrays.asList(constraintA, andConstraint0));
         InSetConstraint constraintD = new InSetConstraint(
@@ -329,7 +329,7 @@ class DecisionTreeFactoryTests {
     @Test
     void shouldReturnAnalysedRuleWithCorrectDecisionStructure_IfConditionalConstraintIsPresent() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
-        InSetConstraint constraintA = new InSetConstraint(inputFieldList.get(0), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
+        InSetConstraint constraintA = new InSetConstraint(inputFieldList.getFirst(), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
         GreaterThanConstraint constraintB = new GreaterThanConstraint(inputFieldList.get(1), NumberUtils.coerceToBigDecimal(10));
         GreaterThanConstraint constraintC = new GreaterThanConstraint(inputFieldList.get(1), NumberUtils.coerceToBigDecimal(20));
         ConditionalConstraint conditionalConstraint = new ConditionalConstraint(constraintA, constraintB, constraintC);
@@ -390,7 +390,7 @@ class DecisionTreeFactoryTests {
     @Test
     void shouldReturnAnalysedRuleWithCorrectDecisionStructure_IfNegatedConditionalConstraintIsPresent() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
-        InSetConstraint constraintA = new InSetConstraint(inputFieldList.get(0), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
+        InSetConstraint constraintA = new InSetConstraint(inputFieldList.getFirst(), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
         GreaterThanConstraint constraintB = new GreaterThanConstraint(inputFieldList.get(1), NumberUtils.coerceToBigDecimal(20));
         GreaterThanConstraint constraintC = new GreaterThanConstraint(inputFieldList.get(1), NumberUtils.coerceToBigDecimal(10));
         ConditionalConstraint conditionalConstraint = new ConditionalConstraint(constraintA, constraintB, constraintC);
@@ -445,7 +445,7 @@ class DecisionTreeFactoryTests {
     @Test
     void shouldReturnAnalysedRuleWithCorrectDecisionStructure_IfDoubleNegationIsPresent() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
-        InSetConstraint constraintA = new InSetConstraint(inputFieldList.get(0), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
+        InSetConstraint constraintA = new InSetConstraint(inputFieldList.getFirst(), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
         Constraint notConstraint0 = constraintA.negate();
         Constraint notConstraint1 = notConstraint0.negate();
         Profile testInput = new Profile(inputFieldList, Collections.singletonList(notConstraint1), new ArrayList<>());
@@ -467,7 +467,7 @@ class DecisionTreeFactoryTests {
     @Test
     void shouldReturnAnalysedRuleWithCorrectDecisionStructure_IfNegatedAndIsPresent() {
         List<Field> inputFieldList = Arrays.asList(createField("one"), createField("two"), createField("three"));
-        InSetConstraint constraintA = new InSetConstraint(inputFieldList.get(0), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
+        InSetConstraint constraintA = new InSetConstraint(inputFieldList.getFirst(), TestAtomicConstraintBuilder.inSetRecordsFrom(10));
         GreaterThanConstraint constraintB = new GreaterThanConstraint(inputFieldList.get(1), NumberUtils.coerceToBigDecimal(5));
         NegatedGrammaticalConstraint notConstraint = (NegatedGrammaticalConstraint) new AndConstraint(Arrays.asList(constraintA, constraintB)).negate();
         Profile testInput = new Profile(inputFieldList, Collections.singletonList(notConstraint), new ArrayList<>());
