@@ -43,7 +43,7 @@ public class OperatorStep implements En {
 
     private String extractConstraint(String gherkinConstraint) {
         List<String> allConstraints = Arrays.asList(gherkinConstraint.split(" "));
-        return allConstraints.get(0) + allConstraints
+        return allConstraints.getFirst() + allConstraints
             .stream()
             .skip(1)
             .map(value -> value.substring(0, 1).toUpperCase() + value.substring(1))
